apps/admin/hello-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes
  namespace: admin
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  ingressClassName: traefik
  rules:
    - host: hello-kubernetes.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  hello-kubernetes-hello-kubernetes
                port:
                  number: 80
